tests/baselines/reference/unusedTypeParameterInLambda1.errors.txt
tests/cases/compiler/unusedTypeParameterInLambda1.ts(3,16): error TS6133: 'T' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInLambda1.ts (1 errors) ====
    class A {
        public f1() {
            return <T>() => {
                   ~~~
!!! error TS6133: 'T' is declared but its value is never read.
    
            }
        }
    }